--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+
 .container {
   height: 500px;
   width: 800px;
@@ -33,4 +34,8 @@
   object-fit: cover;
   opacity: .5;
 
+}
+
+.active {
+  border: solid yellow;
 }
